# pouw-main-iteration

./: .coveragerc  .gitignore  AUTHORS.rst  LICENSE  LICENSE.txt  README.md  communication.md  current_communication.md  node_diagram.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt
datasets/: data_clean.csv
docs/: Makefile  conf.py  index.rst
mxnet/: Dockerfile.build  README.md  build.sh
pai/: __init__.py
pai/pouw/: borda.py  client-task-definition-csv.yaml  client-task-definition-uci-mse.yaml  client-task-definition.yaml  cluster.py  constants.py  message_map.py  overdrive.py  start_cluster.py
pai/pouw/adversarial/: gradient_poisoning.py
pai/pouw/dkg/: distributed_joint_feldman.py  joint_feldman.py  start_dkg_cluster.py
pai/pouw/filler_tasks/: README.md  generator.py  template.jsonnet
pai/pouw/message_history/: optimisation.py  voting.py
pai/pouw/mining/: allowed_time.py  gbtminer.py  utils.py
pai/pouw/mining/blkmaker/: blkmaker.py  blktemplate.py  example.py  extra.py
pai/pouw/nodes/decentralized/: client.py  committee_candidate.py  message_map.py  model_shape.py  trainer.py  worker.py  worker_tf.py
pai/pouw/nodes/decentralized/communication_poc/: README.md  receiver_worker.py  sender_worker.py  start_cluster.py
pai/pouw/pocs/: csv_loader_acc.py  csv_loader_mse.py  gan_tf.py  worker_tf.py
pai/pouw/ticket_selection/: README.md  similarity.py  vrf.py
pai/pouw/ticket_selection/vrf_poc/: CMakeLists.txt  main.cpp
pai/pouw/verification/: README.md  client.py  iqr.py  metrics_improvement.py  mining_time.py  mock_utils.py  server.py  task_info.proto  task_info.py  task_info_pb2.py  task_info_pb2_grpc.py  verifier-gen.sh  verifier.py  verifier_pb2.py  verifier_pb2_grpc.py
pai/pouw/verification/verifier_client/: CMakeLists.txt  README.md  verifier_client.cc
tests/: conftest.py
tests/data/: abalone.csv  client-task-definition.yaml
tests/pouw/nods/decentralized/: test_client.py  test_committee_candidate.py  test_worker.py
